alignment issue fixed

--- a/src/components/dashboard-preference/sass/_dashboard-preference.scss
+++ b/src/components/dashboard-preference/sass/_dashboard-preference.scss
@@ -48,7 +48,6 @@
             background-color: transparent;
             padding: 20px 0;
             .custom-checkbox{
-                top:10px;
                 span{
                     text-indent:-9999px;
                     position:absolute;
@@ -58,6 +57,7 @@
             h3{
                 font-size:18px;
                 font-family: FSMe-Light;
+                line-height: 20px;
             }
             a {
                 color:$gray-bright-bg;
